# lobuilder

./: README.rst  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: image-building.rst
docker/base/: Dockerfile.j2  percona-release-0.1-4.noarch.rpm
docker/lo-base/: Dockerfile.j2  cmd_start  custom_bashrc  set_configs.py  sudo-1.8.19p2-14.el7_5.x86_64.rpm
docker/plcloud-toolbox/: Dockerfile.j2  docker-images-local.repo  extend_start
docs/source/: conf.py
docs/source/admin/: image-building.rst
etc/oslo-config-generator/: lo-build.conf
lobuilder/: __init__.py  exception.py  opts.py  project_root.py  version.py
lobuilder/cmd/: build.py
lobuilder/common/: config.py
lobuilder/image/: build.py
lobuilder/tests/: __init__.py  base.py  test_build.py
lobuilder/tests/docker/: comon.j2
lobuilder/tests/fakes/: __init__.py
lobuilder/tests/fakes/docker/base/: Dockerfile
releasenotes/source/: conf.py
tests/: __init__.py  test_build.py
tools/: lo-build
tools/pep8/: validate-all-dockerfiles.sh
