[metadata]
name = Image-Builder
summary = Extend From Kolla OpenStack Deployment
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/kolla/
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5


[files]
packages =
    lobuilder
data_files =
    share/lobuilder/docker = docker/*


[entry_points]
console_scripts =
    lo-build = lobuilder.cmd.build:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source